# persistent-opaleye-generator

./: persistent-opaleye-generator.cabal  stack.yaml
config/: models
src/: Main.hs
templates/: settings.yml  starter.hs.mustache
