name:                persistent-opaleye-generator
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/persistent-opaleye-generator#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable persistent-opaleye-generator
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , FlexibleContexts
  build-depends:       base >= 4.7 && < 5
                     , mustache == 0.2.0.0
                     , text
                     , unordered-containers
                     , containers
                     , vector
                     , yaml
                     , lens
